--- a/tenceCase/test_wait.html
+++ b/tenceCase/test_wait.html
@@ -17,7 +17,7 @@
 </script>
 <form name="f1">
     <input type="text" name="t1">
-    <input type="button" value="Click me" onclick="f()">
+    <input type="button" value="Click me" onclick="f()" name="btn">
     <div id="id1"></div>
 </form>
 </body>
